infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auctionxi
  labels:
    app.kubernetes.io/managed-by: argocd
